--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     <TextView
         android:id="@+id/drag"
         style="@style/AppTheme.CircleTextView"
-        android:layout_width="@dimen/circle_size"
-        android:layout_height="@dimen/circle_size"
+        android:layout_width="@dimen/drag_circle_size"
+        android:layout_height="@dimen/drag_circle_size"
         android:layout_marginTop="32dp"
         android:backgroundTint="#2e7d32"
         android:padding="8dp"
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toTopOf="@+id/damping_value" />
 
     <TextView
-        android:id="@+id/damping_value"
+        android:id="@id/damping_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingEnd="8dp"
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toTopOf="@id/damping_label" />
 
     <TextView
-        android:id="@+id/stiffness_label"
+        android:id="@id/stiffness_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingEnd="8dp"
@@ -77,7 +77,7 @@
         app:layout_constraintStart_toStartOf="@id/damping_label" />
 
     <TextView
-        android:id="@+id/stiffness_value"
+        android:id="@id/stiffness_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingEnd="8dp"
