--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="circle_size">72dp</dimen>
+    <dimen name="drag_circle_size">72dp</dimen>
     <dimen name="first_circle_size">56dp</dimen>
     <dimen name="second_circle_size">32dp</dimen>
     <dimen name="circle_distance">48dp</dimen>
